--- a/wizards/potting_create_ot_wizard_views.xml
+++ b/wizards/potting_create_ot_wizard_views.xml
@@ -14,6 +14,8 @@
                         <h3 class="text-muted">
                             <span>Pour la commande: </span>
                             <field name="customer_order_id" readonly="1" class="oe_inline"/>
+                            <span> - Campagne: </span>
+                            <field name="campaign_period" readonly="1" class="oe_inline fw-bold"/>
                         </h3>
                     </div>
                     
@@ -38,9 +40,8 @@
                         </group>
                     </group>
                     
-                    <group string="📝 Notes">
-                        <field name="note" nolabel="1" placeholder="Notes ou instructions particulières..."/>
-                    </group>
+                    <separator string="📝 Notes"/>
+                    <field name="note" nolabel="1" placeholder="Notes ou instructions particulières..."/>
                 </sheet>
                 
                 <footer>
