--- a/views/potting_lot_views.xml
+++ b/views/potting_lot_views.xml
@@ -13,7 +13,10 @@
                   multi_edit="1"
                   sample="1">
                 <field name="company_id" column_invisible="1"/>
-                <field name="name" decoration-bf="1"/>
+                <field name="display_name_with_premium" string="N° Lot" decoration-bf="1"/>
+                <field name="name" column_invisible="1"/>
+                <field name="has_premium" column_invisible="1"/>
+                <field name="premium_amount" string="Prime" optional="show" decoration-success="has_premium"/>
                 <field name="transit_order_id" optional="show"/>
                 <field name="customer_id" optional="show"/>
                 <field name="consignee_id" optional="show"/>
@@ -100,6 +103,14 @@
                             <field name="quality_note" widget="text" invisible="not quality_check" placeholder="Notes qualité..."/>
                         </group>
                     </group>
+                    <group>
+                        <group string="💰 Prime">
+                            <field name="currency_id" invisible="1"/>
+                            <field name="premium_amount" widget="monetary"/>
+                            <field name="has_premium" widget="boolean_toggle" readonly="1"/>
+                            <field name="display_name_with_premium" string="Référence avec prime" readonly="1" class="fw-bold text-success" invisible="not has_premium"/>
+                        </group>
+                    </group>
                     <notebook>
                         <page string="Productions" name="productions">
                             <field name="production_line_ids">
@@ -134,6 +145,9 @@
         <field name="arch" type="xml">
             <kanban default_group_by="state" class="o_kanban_mobile">
                 <field name="name"/>
+                <field name="display_name_with_premium"/>
+                <field name="has_premium"/>
+                <field name="premium_amount"/>
                 <field name="transit_order_id"/>
                 <field name="product_type"/>
                 <field name="target_tonnage"/>
@@ -145,11 +159,12 @@
                 <progressbar field="state" colors='{"draft": "secondary", "in_production": "warning", "ready": "info", "potted": "success"}'/>
                 <templates>
                     <t t-name="kanban-box">
-                        <div t-attf-class="oe_kanban_global_click #{record.is_full.raw_value ? 'border-start border-4 border-success' : ''}">
+                        <div t-attf-class="oe_kanban_global_click #{record.is_full.raw_value ? 'border-start border-4 border-success' : ''} #{record.has_premium.raw_value ? 'border-top border-3 border-warning' : ''}">
                             <div class="o_kanban_record_top mb-2">
                                 <div class="o_kanban_record_headings">
                                     <strong class="o_kanban_record_title fs-5">
-                                        <i class="fa fa-cube me-1 text-primary"/> <field name="name"/>
+                                        <i class="fa fa-cube me-1 text-primary"/> <field name="display_name_with_premium"/>
+                                        <span t-if="record.has_premium.raw_value" class="badge bg-warning text-dark ms-1" title="Prime"><i class="fa fa-star"/></span>
                                     </strong>
                                 </div>
                                 <field name="state" widget="label_selection" options="{'classes': {'draft': 'secondary', 'in_production': 'warning', 'ready': 'info', 'potted': 'success'}}"/>
@@ -201,6 +216,9 @@
                 <separator/>
                 <filter string="Capacité atteinte" name="full" domain="[('is_full', '=', True)]"/>
                 <filter string="En cours de remplissage" name="not_full" domain="[('is_full', '=', False), ('state', '=', 'in_production')]"/>
+                <separator/>
+                <filter string="Avec prime" name="with_premium" domain="[('has_premium', '=', True)]"/>
+                <filter string="Sans prime" name="without_premium" domain="[('has_premium', '=', False)]"/>
                 <separator/>
                 <filter string="Masse de cacao" name="cocoa_mass" domain="[('product_type', '=', 'cocoa_mass')]"/>
                 <filter string="Beurre de cacao" name="cocoa_butter" domain="[('product_type', '=', 'cocoa_butter')]"/>
